// Vitest Snapshot v1

exports[`FluidContainer > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: 50px 1fr 50px;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-0>* {
  grid-column: 2;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-0 {
    grid-template-columns: 1fr 90% 1fr;
  }
}

<div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`FullBleed > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  grid-column: 1/-1;
}

<div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;
